cabal-version:      2.2
name:               cabal-hie
version:            0.1
synopsis:           Generate hie.yaml files
category:           Development
description:
  Generate hie.yaml files from cabal.project and plan.json data

license:            GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==8.10.7
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git

library cabal-hie-internal
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  CabalHie.Main
  other-modules:    Paths_cabal_hie
  autogen-modules:  Paths_cabal_hie

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.14.0.0
    , binary            ^>=0.8.8.0
    , bytestring        ^>=0.10.12.0
    , containers        ^>=0.6.5.1
    , deepseq           ^>=1.4.4.0
    , directory         ^>=1.3.6.0
    , filepath          ^>=1.4.2.1
    , mtl               ^>=2.2.2
    , parsec            ^>=3.1.14.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.13.2
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=1.2.4.1

  -- We use Cabal-3.6
  build-depends:    Cabal ^>=3.6

  -- We also use peura
  build-depends:    peura

  -- dependencies in library
  build-depends:
    , aeson                  ^>=2.0.3.0
    , ansi-terminal
    , cabal-install-parsers
    , cabal-plan
    , HsYAML-aeson           ^>=0.2
    , optparse-applicative

executable cabal-hie
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N2
  build-depends:
    , base
    , cabal-hie-internal
