cabal-version:      2.2
name:               cabal-hie
version:            0.1
synopsis:           Generate hie.yaml files
category:           Development
description:
  Generate hie.yaml files from cabal.project and plan.json data

license:            GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==9.8.2
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git

library cabal-hie-internal
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  CabalHie.Main
  other-modules:    Paths_cabal_hie
  autogen-modules:  Paths_cabal_hie

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.19.0.0
    , binary            ^>=0.8.9.0
    , bytestring        ^>=0.12.0.2
    , containers        ^>=0.6.8
    , deepseq           ^>=1.5.0.0
    , directory         ^>=1.3.8.1
    , filepath          ^>=1.4.100.4
    , mtl               ^>=2.3.1
    , parsec            ^>=3.1.17.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.18.0
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=2.1

  -- We use Cabal-3.12
  build-depends:    Cabal ^>=3.12.1.0

  -- We also use peura
  build-depends:    peura

  -- dependencies in library
  build-depends:
    , aeson
    , ansi-terminal
    , cabal-install-parsers
    , cabal-plan
    , HsYAML-aeson           ^>=0.2
    , optparse-applicative

executable cabal-hie
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N2
  build-depends:
    , base
    , cabal-hie-internal
