cabal-version:      2.2
name:               cabal-store-check
version:            0.1
synopsis:           Check integrity of cabal store
category:           Development
description:        Check integrity of cabal store, think @ghc-pkg check@
license:            GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==9.2.7
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git
  subdir:   cabal-store-check

library cabal-store-check-internal
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:    CabalStoreCheck.Main
  other-modules:      Paths_cabal_store_check
  autogen-modules:    Paths_cabal_store_check

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.16.4.0
    , binary            ^>=0.8.9.0
    , bytestring        ^>=0.11.3.1
    , containers        ^>=0.6.5.1
    , deepseq           ^>=1.4.6.1
    , directory         ^>=1.3.6.2
    , filepath          ^>=1.4.2.2
    , mtl               ^>=2.2.2
    , parsec            ^>=3.1.14.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.16.0
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=1.2.5.0

  -- We use Cabal-3.6
  build-depends:      Cabal ^>=3.8.1.0

  -- We also use peura
  build-depends:      peura

  -- dependencies in library
  build-depends:
    , cabal-install-parsers
    , optparse-applicative   ^>=0.17.0.0
    , topograph

  default-extensions:
    NoImplicitPrelude
    DeriveFunctor
    OverloadedStrings

executable cabal-store-check
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N2
  build-depends:
    , base
    , cabal-store-check-internal
