cabal-version:      2.2
name:               cabal-store-gc
version:            0.1
synopsis:           Garbage collection of cabal store
category:           Development
description:
  Garbage collection of cabal store, modeled losely after nix gc.

license:            GPL-2.0-or-later
license-files:      LICENSE LICENSE.GPLv2 LICENSE.GPLv3
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.2
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git
  subdir:   cabal-store-gc

library cabal-store-gc-internal
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:    CabalStoreGC.Main  CabalStoreGC.Deps
  other-modules:      Paths_cabal_store_gc
  autogen-modules:    Paths_cabal_store_gc

  -- ghc-boot dependencies
  build-depends:
    , base        ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0
    , bytestring  ^>=0.10.8.2
    , containers  ^>=0.5.10.2 || ^>=0.6.0.1
    , deepseq     ^>=1.4.3.0
    , directory   ^>=1.3.0.2
    , filepath    ^>=1.4.1.2
    , mtl         ^>=2.2.2
    , parsec      ^>=3.1.13.0
    , pretty      ^>=1.1.3.3
    , process     ^>=1.6.1.0
    , text        ^>=1.2.3.0

  -- We use Cabal-3.4
  build-depends:      Cabal ^>=3.4

  -- We also use peura
  build-depends:      peura

  -- dependencies in library
  build-depends:
    , base64-bytestring
    , cabal-install-parsers
    , cabal-plan
    , cryptohash-sha256
    , optics-core
    , optparse-applicative   ^>=0.16.0.0
    , paths
    , topograph

  default-extensions:
    NoImplicitPrelude
    DeriveFunctor
    OverloadedStrings

executable cabal-store-gc
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N2
  build-depends:
    , base
    , cabal-store-gc-internal
