cabal-version:      2.2
name:               cabal-store-gc
version:            0.1
synopsis:           Garbage collection of cabal store
category:           Development
description:
  Garbage collection of cabal store, modeled losely after nix gc.

license:            GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==9.8.2
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git
  subdir:   cabal-store-gc

library cabal-store-gc-internal
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:
    CabalStoreGC.Deps
    CabalStoreGC.Main

  other-modules:      Paths_cabal_store_gc
  autogen-modules:    Paths_cabal_store_gc

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.19.0.0
    , binary            ^>=0.8.9.0
    , bytestring        ^>=0.12.0.2
    , containers        ^>=0.6.8
    , deepseq           ^>=1.5.0.0
    , directory         ^>=1.3.8.1
    , filepath          ^>=1.4.100.4
    , mtl               ^>=2.3.1
    , parsec            ^>=3.1.17.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.18.0
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=2.1

  -- We use Cabal-3.12
  build-depends:      Cabal ^>=3.12.1.0

  -- We also use peura
  build-depends:      peura

  -- dependencies in library
  build-depends:
    , base64-bytestring
    , cabal-install-parsers
    , cabal-plan
    , cryptohash-sha256
    , optics-core
    , optparse-applicative   ^>=0.18.0.0
    , paths
    , topograph

  default-extensions:
    DeriveFunctor
    NoImplicitPrelude
    OverloadedStrings

executable cabal-store-gc
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N2
  build-depends:
    , base
    , cabal-store-gc-internal
