cabal-version:      2.2
name:               cabal-tags
version:            0.1
synopsis:           Generate tags files from hie files
category:           Development
description:        Generate tags files from hie files.
license:            GPL-3.0-or-later AND BSD-3-Clause
license-file:       LICENSE
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==8.10.7
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras

library cabal-tags-internal
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:
    CabalTags.GHC.All
    CabalTags.Tag
    CabalTags.Main
    Hiero

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.14.0.0
    , binary            ^>=0.8.8.0
    , bytestring        ^>=0.10.12.0
    , containers        ^>=0.6.5.1
    , deepseq           ^>=1.4.4.0
    , directory         ^>=1.3.6.0
    , filepath          ^>=1.4.2.1
    , mtl               ^>=2.2.2
    , parsec            ^>=3.1.14.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.13.2
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=1.2.4.1

  build-depends:
    , ghc
    , ghc-boot

  -- We use Cabal-3.6
  build-depends:      Cabal ^>=3.6

  -- We also use peura
  build-depends:      peura

  -- dependencies in library
  build-depends:
    , cabal-install-parsers
    , cabal-plan
    , Glob
    , optparse-applicative   ^>=0.17.0.0

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

executable cabal-tags
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded
  build-depends:
    , base
    , cabal-tags-internal
