cabal-version:      1.12
name:               paths
version:            0.2.0.0
synopsis:
  Library for representing and manipulating type-safe file paths

description:
  This library provides a more type-safe version of 'FilePath's together with thin wrappers around common IO operations.
  .
  This library is directly derived from @hackage-security@'s
  <http://hackage.haskell.org/package/hackage-security-0.5.2.2/docs/Hackage-Security-Util-Path.html Hackage.Security.Util.Path>
  module.

bug-reports:        https://github.com/hvr/paths/issues
license:            BSD3
license-file:       LICENSE
author:             Herbert Valerio Riedel
copyright:
  2015-2017 Well-Typed LLP,
  2017 Herbert Valerio Riedel

maintainer:         hvr@gnu.org
category:           System
build-type:         Simple
extra-source-files: ChangeLog.md
tested-with:
  GHC ==9.8.2

flag directory--LT-1_2
  description:
    [directory](https://hackage.haskell.org/package/directory) < 1.2

  manual:      False
  default:     False

library
  hs-source-dirs:   src
  exposed-modules:
    System.Path
    System.Path.IO
    System.Path.Lens
    System.Path.QQ
    System.Path.Unsafe

  other-modules:
    System.Path.Internal
    System.Path.Internal.Compat
    System.Path.Internal.Native

  default-language: Haskell2010
  other-extensions:
    CPP
    ExistentialQuantification
    Safe
    Trustworthy
    Unsafe

  if impl(ghc >=8.0)
    other-extensions: TemplateHaskellQuotes

  else
    other-extensions: TemplateHaskell

  build-depends:
      base              >=4.5   && <4.20
    , bytestring        >=0.9.2 && <0.13
    , deepseq           >=1.3   && <1.6
    , directory         >=1.1   && <1.4
    , filepath          >=1.3   && <1.5
    , template-haskell  >=2.7   && <2.22
    , text              >=0.11  && <1.3  || >=2.0 && <2.2
    , time              >=1.4   && <1.13

  if !impl(ghc >=8.0)
    build-depends: transformers >=0.3 && <0.6

  if flag(directory--lt-1_2)
    build-depends:
        directory  <1.2
      , old-time   >=1  && <1.2

  else
    build-depends: directory >=1.2

  ghc-options:      -Wall

source-repository head
  location: https://github.com/hvr/paths.git
  type:     git
