cabal-version: 2.2
name:          peura
version:       0.20191117
synopsis:      Oleg's "prelude"
category:      Development
description:
  A very opinionated library, used to power tools in cabal-extras suite.

maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       GPL-2.0-or-later
license-files: LICENSE LICENSE.GPLv2 LICENSE.GPLv3
tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras

library
  default-language:   Haskell2010
  hs-source-dirs:     src

  -- Main module
  exposed-modules:    Peura

  -- These modules are re-exported
  -- cabal-fmt: expand src -Peura
  exposed-modules:
    Peura.ByteString
    Peura.Debug
    Peura.Exports
    Peura.Monad
    Peura.Orphans
    Peura.Paths
    Peura.Process
    Peura.Serialise

  -- GHC-boot dependencies
  build-depends:
    , base        ^>=4.10.1.0 || ^>=4.11.0.0 || ^>=4.12.0.0 || ^>=4.13.0.0
    , bytestring  ^>=0.10.8.2
    , containers  ^>=0.5.10.2 || ^>=0.6.0.1
    , deepseq     ^>=1.4.3.0
    , directory   ^>=1.3.0.2
    , filepath    ^>=1.4.1.2
    , mtl         ^>=2.2.2
    , parsec      ^>=3.1.13.0
    , pretty      ^>=1.1.3.3
    , process     ^>=1.6.1.0
    , text        ^>=1.2.3.0

  -- We use Cabal-3.0
  build-depends:      Cabal ^>=3.0

  -- Extra dependencies
  build-depends:
    , ansi-terminal      ^>=0.10.1
    , base-compat        ^>=0.11.0
    , clock              ^>=0.8
    , concurrent-output  ^>=1.10.11
    , exceptions         ^>=0.10.3
    , optics             ^>=0.2
    , paths              ^>=0.2.0.0
    , process-extras     ^>=0.7.4
    , serialise          ^>=0.2.1.0
    , unliftio-core      ^>=0.1.2.0

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    GADTs
    GeneralizedNewtypeDeriving
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
