cabal-version: 2.2
name:          peura
version:       0.20211209
synopsis:      Oleg's "prelude"
category:      Development
description:
  A very opinionated library, used to power tools in cabal-extras suite.

maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
license:       GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

tested-with:   GHC ==9.8.2

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras

flag concurrent-output
  description: Use concurrent-output. Beneficial if you need regions
  default:     True
  manual:      True

library
  default-language:   Haskell2010
  hs-source-dirs:     src

  -- Main module
  exposed-modules:    Peura

  -- These modules are re-exported
  -- cabal-fmt: expand src -Peura
  exposed-modules:
    Peura.Async
    Peura.ByteString
    Peura.Cabal
    Peura.Debug
    Peura.Exports
    Peura.GHC
    Peura.Glob
    Peura.Monad
    Peura.Orphans
    Peura.Paths
    Peura.Process
    Peura.Run
    Peura.Serialise
    Peura.Temporary
    Peura.Trace
    Peura.Tracer
    Peura.Warning

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.19.0.0
    , binary            ^>=0.8.9.0
    , bytestring        ^>=0.12.0.2
    , containers        ^>=0.6.8
    , deepseq           ^>=1.5.0.0
    , directory         ^>=1.3.8.1
    , filepath          ^>=1.4.100.4
    , mtl               ^>=2.3.1
    , parsec            ^>=3.1.17.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.18.0
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=2.1

  -- We use Cabal-3.10
  build-depends:      Cabal ^>=3.10.3.0

  -- Common exports
  build-depends:      gentle-introduction ^>=2024.4

  -- Extra dependencies
  build-depends:
    , aeson                  ^>=2.2.1.0
    , ansi-terminal          ^>=1.1
    , async                  ^>=2.2.2
    , base-compat            ^>=0.13.0
    , cabal-install-parsers  ^>=0.6
    , cabal-plan             ^>=0.7.2.0
    , clock                  ^>=0.8
    , edit-distance          ^>=0.2.2.1
    , exceptions             ^>=0.10.3
    , Glob                   ^>=0.10.0
    , optics-core            ^>=0.4.1
    , optics-extra           ^>=0.4.1
    , optparse-applicative   ^>=0.18.0.0
    , paths                  ^>=0.2.0.0
    , serialise              ^>=0.2.1.0
    , stm                    ^>=2.4.5.1  || ^>=2.5.0.0
    , strict                 ^>=0.5
    , temporary              ^>=1.3
    , these                  ^>=1.2
    , universe-base          ^>=1.1.1
    , unliftio-core          ^>=0.2.0.0

  if flag(concurrent-output)
    build-depends: concurrent-output ^>=1.10.11

  default-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

  x-docspec-options:  --verbose
