Name: cpphs
Version: 1.20.9.1
Copyright: 2004-2017, Malcolm Wallace
License: LGPL
License-File: LICENCE-LGPL
Cabal-Version: >= 1.8
Author: Malcolm Wallace <Malcolm.Wallace@me.com>
Maintainer: Malcolm Wallace <Malcolm.Wallace@me.com>
Homepage: http://projects.haskell.org/cpphs/
bug-reports: https://github.com/malcolmwallace/cpphs/issues
Synopsis: A liberalised re-implementation of cpp, the C pre-processor.
Description:
    Cpphs is a re-implementation of the C pre-processor that is both
    more compatible with Haskell, and itself written in Haskell so
    that it can be distributed with compilers.
    .
    This version of the C pre-processor is pretty-much
    feature-complete and compatible with traditional (K&R)
    pre-processors.  Additional features include: a plain-text mode;
    an option to unlit literate code files; and an option to turn
    off macro-expansion.
Category: Development
Build-type: Simple
Extra-Source-Files: README, LICENCE-GPL, LICENCE-commercial, CHANGELOG, docs/cpphs.1, docs/index.html

tested-with:
  ghc ==8.10.1
   || ==8.8.3
   || ==8.6.5
   || ==8.4.4
   || ==8.2.2
   || ==8.0.2
   || ==7.10.3
   || ==7.8.4
   || ==7.6.3
   || ==7.4.2
   || ==7.2.2
   || ==7.0.4

flag old-locale
  description: If true, use old-locale, otherwise use time 1.5 or newer.
  manual:      False
  default:     False

Library
    Build-Depends: base >= 4.3 && <5, directory <1.4, polyparse>=1.13 && <1.14

    if flag(old-locale)
      Build-Depends:
          old-locale  >=1.0.0.2 && <1.1
        , time        >=0       && <1.5
      Hs-Source-Dirs: . old

    else
      Build-Depends: time >=1.5 && <1.11
      Hs-Source-Dirs: . new

    Exposed-Modules:
        Language.Preprocessor.Cpphs
        Language.Preprocessor.Unlit
    Other-Modules:
        Language.Preprocessor.Cpphs.CppIfdef
        Language.Preprocessor.Cpphs.HashDefine
        Language.Preprocessor.Cpphs.MacroPass
        Language.Preprocessor.Cpphs.Options
        Language.Preprocessor.Cpphs.Position
        Language.Preprocessor.Cpphs.ReadFirst
        Language.Preprocessor.Cpphs.RunCpphs
        Language.Preprocessor.Cpphs.SymTab
        Language.Preprocessor.Cpphs.Tokenise
        TimeCompat

Executable cpphs
    Build-Depends: base>=3&&<6, directory <1.4, polyparse>=1.13 && <1.14
    Main-Is: cpphs.hs

    if flag(old-locale)
      Build-Depends:
          old-locale  >=1.0.0.2 && <1.1
        , time        >=0       && <1.5
      Hs-Source-Dirs: . old

    else
      Build-Depends: time >=1.5 && <1.11
      Hs-Source-Dirs: . new

    Other-Modules:
        Language.Preprocessor.Cpphs
        Language.Preprocessor.Unlit
        Language.Preprocessor.Cpphs.CppIfdef
        Language.Preprocessor.Cpphs.HashDefine
        Language.Preprocessor.Cpphs.MacroPass
        Language.Preprocessor.Cpphs.Options
        Language.Preprocessor.Cpphs.Position
        Language.Preprocessor.Cpphs.ReadFirst
        Language.Preprocessor.Cpphs.RunCpphs
        Language.Preprocessor.Cpphs.SymTab
        Language.Preprocessor.Cpphs.Tokenise
        TimeCompat

Source-Repository head
    Type:     git
    Location: https://github.com/hackage-trustees/malcolm-wallace-universe
